<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="38dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/res_activitymain_txtsignup"
                    android:textColor="#47525E"
                    android:textSize="19pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/res_activitymain_txtdesksignup"
                    android:textColor="#47525E"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtNamaLengkap"
                    android:drawableEnd="@drawable/ic_username_edt"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableRight="@drawable/edittext_signin"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_hint_edt_namalengkap"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtJenisKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableEnd="@drawable/gender"
                    android:drawableRight="@drawable/gender"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_hint_edt_jeniskelamin"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtSetUsernameSignin"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableEnd="@drawable/ic_username_edt"
                    android:drawableRight="@drawable/ic_username_edt"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_hint_edt_username"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtSetPasswordSignin"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableEnd="@drawable/ic_password_edt"
                    android:drawableRight="@drawable/ic_password_edt"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_password_edt"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtConfirmPasswordSignin"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawableRight="@drawable/ic_password"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_passwordconfirm_edt"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <EditText
                    android:id="@+id/edtSetEmail"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_signin"
                    android:drawableEnd="@drawable/ic_mail"
                    android:drawableRight="@drawable/ic_mail"
                    android:fontFamily="sans-serif"
                    android:hint="@string/txt_hint_edt_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="7pt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnBacktoSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="4"
                        android:background="@drawable/button_silver"
                        android:contentDescription="@string/txt_imagebutton_back"
                        android:onClick="toSigninBack"
                        android:src="@drawable/ic_back"
                        />

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_theme"
                        android:text="@string/btn_txt_signup"
                        android:textColor="#ffff"
                        android:textSize="11pt"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>